objects/Account_Team__c.object
<CustomObject>
    <fields>
        <fullName>AccountAccessLevel__c</fullName>
        <label>Account Access</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Read Only</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
                <value>
                    <fullName>Read/Write</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>AccountTeamMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CaseAccessLevel__c</fullName>
        <label>Case Access Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Read Only</fullName>
                </value>
                <value>
                    <fullName>Read/Write</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactAccessLevel__c</fullName>
        <label>Contact Access</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Read Only</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
                <value>
                    <fullName>Read/Write</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunityAccessLevel__c</fullName>
        <label>Opportunity Access Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Read/Write</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TeamMemberRole__c</fullName>
        <label>Team Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Dedicated Representative</fullName>
                </value>
                <value>
                    <fullName>Account Executive</fullName>
                </value>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Actuary</fullName>
                </value>
                <value>
                    <fullName>AIA Admin</fullName>
                </value>
                <value>
                    <fullName>AIA User</fullName>
                </value>
                <value>
                    <fullName>Auditor</fullName>
                </value>
                <value>
                    <fullName>Automated Enrollment Tech</fullName>
                </value>
                <value>
                    <fullName>BCM Coordinator</fullName>
                </value>
                <value>
                    <fullName>BeneFact Coder</fullName>
                </value>
                <value>
                    <fullName>BeneFact Portal Tech</fullName>
                </value>
                <value>
                    <fullName>BeneFact Tester</fullName>
                </value>
                <value>
                    <fullName>Benefit Admin Manager</fullName>
                </value>
                <value>
                    <fullName>Benefit Coder</fullName>
                </value>
                <value>
                    <fullName>Benefit Contract Specialist</fullName>
                </value>
                <value>
                    <fullName>Benefit Design Approvers</fullName>
                </value>
                <value>
                    <fullName>Benefit Tester</fullName>
                </value>
                <value>
                    <fullName>Billing Tech</fullName>
                </value>
                <value>
                    <fullName>BlueFund</fullName>
                </value>
                <value>
                    <fullName>Blue Rewards Tech</fullName>
                </value>
                <value>
                    <fullName>Cede Document Tech</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Client Advisory Services</fullName>
                </value>
                <value>
                    <fullName>Contract Coordinator</fullName>
                </value>
                <value>
                    <fullName>Contract Manager</fullName>
                </value>
                <value>
                    <fullName>Contract Tech</fullName>
                </value>
                <value>
                    <fullName>Enrollment Tech</fullName>
                </value>
                <value>
                    <fullName>Facets Migration Contact</fullName>
                </value>
                <value>
                    <fullName>Implementation Coordinator</fullName>
                </value>
                <value>
                    <fullName>Implementation Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountTeamMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>test_field_for_filters__c</fullName>
        <formula>if( UserId__c = $User.Id ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Account Team</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Team</label>
    <nameField>
        <displayFormat>ATM-{000000}</displayFormat>
        <label>AccountTeamMember Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>